# moxie-buildings

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-scrapers/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-09-PLAN.md  02-09-SUMMARY.md  02-CONTEXT.md  02-LLM-BENCHMARK.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-scheduler/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md  deferred-items.md
.planning/phases/04-api-layer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/06-fix-data-pipeline-bugs/: 06-01-PLAN.md  06-01-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-scraper-code-test-cleanup/: 07-01-PLAN.md  07-01-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/quick/1-validation-first-scraper-pipeline-scrape/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-pick-a-building-from-the-db-not-ppm-scra/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-validate-random-unvalidated-building-scr/: 3-PLAN.md  3-SUMMARY.md  3-VERIFICATION.md
.planning/quick/4-validate-next-building-groups-needs-clas/: 4-PLAN.md  4-SUMMARY.md  4-VERIFICATION.md
.planning/quick/5-continue-per-building-validation-pick-un/: 5-PLAN.md  5-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 3522f8b6e283_add_consecutive_zero_count.py  50fb02b298b3_initial_schema.py  b89cce9ed1af_add_users_table.py
docs/: PLATFORM-REPORT.md  PROJECT-SPEC.md  RESEARCH-REPORT.md  SCRAPER-NOTES.md
scripts/: create_admin.py  detect_platforms.py  dev_bootstrap.py  extract_rentcafe_credentials.py  llm_benchmark.py  seed.py
src/moxie/: config.py  normalizer.py  scrape.py  scrape_all.py
src/moxie/api/: auth.py  deps.py  main.py  settings.py
src/moxie/db/: models.py  session.py
src/moxie/scheduler/: batch.py  log_config.py  runner.py  sheets_status.py
src/moxie/scrapers/: base.py  platform_detect.py  registry.py
tests/: test_normalizer.py  test_platform_detect.py  test_runner_failure.py  test_save_scrape_result.py  test_scraper_appfolio.py  test_scraper_bozzuto.py  test_scraper_funnel.py  test_scraper_groupfox.py  test_scraper_llm.py  test_scraper_ppm.py  test_scraper_realpage.py  test_scraper_rentcafe.py  test_sheets_sync.py
tests/api/: conftest.py  test_admin.py  test_auth.py  test_units.py
(+18 files in other folders)
